--- a/MadLibs/Views/Home/Form.cshtml
+++ b/MadLibs/Views/Home/Form.cshtml
@@ -12,27 +12,27 @@
   <h1>Fill out the MadLib to learn about Punch's crazy day!</h1>
   <form action="/story" method="post">
     <label for="noun">Something to eat:</label>
-    <input id="noun" name="noun" type="text">
+    <input id="noun" name="inputs" type="text">
     <label for="adjective">Adjective</label>
-    <input id="adjective" name="adjective" type="text">
+    <input id="adjective" name="inputs" type="text">
     <label for="adjective2">Another adjective:</label>
-    <input id="adjective2" name="adjective2" type="text">
+    <input id="adjective2" name="inputs" type="text">
     <label for="noun2">Body part(inside or outside):</label>
-    <input id="noun2" name="noun2" type="text">
+    <input id="noun2" name="inputs" type="text">
     <label for="verbpast">Verb (past tense):</label>
-    <input id="verbpast" name="verbpast" type="text">
+    <input id="verbpast" name="inputs" type="text">
     <label for="gerund">Gerund (verb ending in -ing):</label>
-    <input id="gerund" name="gerund" type="text">
+    <input id="gerund" name="inputs" type="text">
     <label for="verb">Verb:</label>
-    <input id="verb" name="verb" type="text">
+    <input id="verb" name="inputs" type="text">
     <label for="propernoun">Proper noun:</label>
-    <input id="propernoun" name="propernoun" type="text">
+    <input id="propernoun" name="inputs" type="text">
     <label for="gerund2">Another gerund (verb ending in -ing):</label>
-    <input id="gerund2" name="gerund2" type="text">
+    <input id="gerund2" name="inputs" type="text">
     <label for="noun3">Noun:</label>
-    <input id="noun3" name="noun3" type="text">
+    <input id="noun3" name="inputs" type="text">
     <label for="pastparticiple">Emotion verb ending in -ed:</label>
-    <input id="pastparticiple" name="pastparticiple" type="text">
+    <input id="pastparticiple" name="inputs" type="text">
     <button type="submit">Go!</button>
   </form>
 </body>
