WIP working on creating a new story using the same form
Co-authored-by: Sarah Reimann <reimannsarah45@gmail.com>
dquote> Co-authored-by: Kyle Crawford <kcraw217@gmail.com>

--- a/MadLibs/Views/Home/Punch.cshtml
+++ b/MadLibs/Views/Home/Punch.cshtml
@@ -12,11 +12,11 @@
   <body>
     <h1>Punch's Day Off</h1>
     <p>Where do we begin...</p>
-    <p>Punch woke up at 3am this morning because he decided to eat @Model.StoryList[0] waaaay to close to bedtime. He thought he was being @Model.StoryList[1] but really he was just plain @Model.StoryList[2].</p>
-    <p>By the time the @Model.StoryList[0] made its way to Punch's @Model.StoryList[3], it was too late. Punch @Model.StoryList[4] everywhere.
+    <p>Punch woke up at 3am this morning because he decided to eat @Model.StoryList["noun"] waaaay to close to bedtime. He thought he was being @Model.StoryList["adjective"] but really he was just plain @Model.StoryList["adjective2"].</p>
+    <p>By the time the @Model.StoryList["noun"] made its way to Punch's @Model.StoryList["noun2"], it was too late. Punch @Model.StoryList["verbpast"] everywhere.
     </p>
-    <p>3am turned into 4:30am as the @Model.StoryList[5] worsened. So Punch decided to @Model.StoryList[6] until he couldn't @Model.StoryList[6] no more.</p>
-    <p>Punch's roommate, @Model.StoryList[7], heard some commotion from the other room. He got up to investigate and when he opened the door, he found Punch @Model.StoryList[8] on the @Model.StoryList[9]. @Model.StoryList[7] was shocked to say the least. This would be the final straw for @Model.StoryList[7]. The following day Punch would find a letter from his roommate kicking him off the lease.</p>
-    <p>Punch was @Model.StoryList[10]. He would never recover.</p>
+    <p>3am turned into 4:30am as the @Model.StoryList["gerund"] worsened. So Punch decided to @Model.StoryList["verb"] until he couldn't @Model.StoryList["verb"] no more.</p>
+    <p>Punch's roommate, @Model.StoryList["propernoun"], heard some commotion from the other room. He got up to investigate and when he opened the door, he found Punch @Model.StoryList["gerund2"] on the @Model.StoryList["noun3"]. @Model.StoryList["propernoun"] was shocked to say the least. This would be the final straw for @Model.StoryList["propernoun"]. The following day Punch would find a letter from his roommate kicking him off the lease.</p>
+    <p>Punch was @Model.StoryList["pastparticiple"]. He would never recover.</p>
   </body>
 </html>
