--- a/MadLibs/Views/Home/Punch.cshtml
+++ b/MadLibs/Views/Home/Punch.cshtml
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Punch's Day Off</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-    <meta charset='utf-8'>
-  </head>
-  <body>
-    <h1>Punch's Day Off</h1>
-    <p>Where do we begin...</p>
-    <p>Punch woke up at 3am this morning because he decided to eat @Model.StoryList["noun"] waaaay to close to bedtime. He thought he was being @Model.StoryList["adjective"] but really he was just plain @Model.StoryList["adjective2"].</p>
-    <p>By the time the @Model.StoryList["noun"] made its way to Punch's @Model.StoryList["noun2"], it was too late. Punch @Model.StoryList["verbpast"] everywhere.
-    </p>
-    <p>3am turned into 4:30am as the @Model.StoryList["gerund"] worsened. So Punch decided to @Model.StoryList["verb"] until he couldn't @Model.StoryList["verb"] no more.</p>
-    <p>Punch's roommate, @Model.StoryList["propernoun"], heard some commotion from the other room. He got up to investigate and when he opened the door, he found Punch @Model.StoryList["gerund2"] on the @Model.StoryList["noun3"]. @Model.StoryList["propernoun"] was shocked to say the least. This would be the final straw for @Model.StoryList["propernoun"]. The following day Punch would find a letter from his roommate kicking him off the lease.</p>
-    <p>Punch was @Model.StoryList["pastparticiple"]. He would never recover.</p>
-  </body>
+
+<head>
+  <title>Punch's Day Off</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <meta charset='utf-8'>
+</head>
+
+<body>
+  <h1>Punch's Day Off</h1>
+  <p>Where do we begin...</p>
+  <p>Punch woke up at 3am this morning because he decided to eat @Model.StoryList["foodnoun"] waaaay to close to bedtime. He
+    thought he was being @Model.StoryList["adjective"] but really he was just plain @Model.StoryList["adjective2"].</p>
+  <p>By the time the @Model.StoryList["foodnoun"] made its way to Punch's @Model.StoryList["bodypart"], it was too late. Punch
+    @Model.StoryList["verbpast"] everywhere.
+  </p>
+  <p>3am turned into 4:30am as the @Model.StoryList["gerund"] worsened. So Punch decided to @Model.StoryList["verb"] until he
+    couldn't @Model.StoryList["verb"] no more.</p>
+  <p>Punch's roommate, @Model.StoryList["propernoun"], heard some commotion from the other room. He got up to investigate and when
+    he opened the door, he found Punch @Model.StoryList["gerund2"] on the @Model.StoryList["noun3"]. @Model.StoryList["propernoun"] was shocked
+    to say the least. This would be the final straw for @Model.StoryList["propernoun"]. The following day Punch would find a letter
+    from his roommate kicking him off the lease.</p>
+  <p>Punch was @Model.StoryList["pastparticiple"]. He would never recover.</p>
+</body>
+
 </html>
